2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/spikey-neg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: bk-website
  name: bk-website
spec: 
  minReadySeconds: 60 # Number of seconds to wait after a Pod is created and its status is Ready
  selector:
    matchLabels:
      run: bk-website
  template:
    metadata:
      labels:
        run: bk-website
    spec: 
      containers:
      - image: k8s.gcr.io/serve_hostname:v1.4 
        name: hostname 
        ports:
        - containerPort: 9376 
          protocol: TCP
      terminationGracePeriodSeconds: 60
