2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/internal-lb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bk-internal-service
  annotations:
    cloud.google.com/load-balancer-type: "Internal"
  labels:
    app: bk-website
spec:
  type: LoadBalancer
  ports:
  - name: port-name
    port: 80
    protocol: TCP 
  selector:
    app: bk-website # label selector for Pods to target
