2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/spikey-neg-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bk-website-svc
  annotations:
    cloud.google.com/neg: '{"ingress": true}' # Creates an NEG after an Ingress is created
spec: 
  selector:
    run: bk-website
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 9376 # Should match the containerPort used by the Deployment's containers
