2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/spikey-neg-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bk-website-ingress
spec:
  backend:
    serviceName: bk-website-svc # Name of the Service targeted by the Ingress
    servicePort: 80 # Should match the port used by the Service
