2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/dev-allow-from-spikey.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: dev-allow-from-bk
spec:
  policyTypes:
  - Egress
  podSelector:
    matchLabels:
      app: dev
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bk-website
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
