2.Advanced/gke-leveraging-advanced-features/bharath_practise/gke-networking/spikey-allow-from-dev.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: bk-allow-from-dev
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      app: bk-website
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: dev
